Expose SDE taxonomy APIs
